[gd_scene load_steps=3 format=3 uid="uid://cumba57qypfgp"]

[ext_resource type="Script" uid="uid://b0vjaavc4kj8e" path="res://linedef_2d.gd" id="1_0rlh7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0rlh7"]
resource_local_to_scene = true

[node name="DoomLinedef2D" type="Area2D"]
script = ExtResource("1_0rlh7")

[node name="Collider" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
shape = SubResource("RectangleShape2D_0rlh7")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
